--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,4 @@ strawberry-graphql[fastapi]==0.156.3
 sse-starlette==1.2.1
 uvicorn[standard]==0.20.0
 pydantic-settings==2.2.1
+python-dotenv==1.0.1
